# genomic-offsets

./: .gitignore  Makefile  README.md  environment.yml  geometric.html  gf.html  index.html  lfmm.html  pixi.toml  pyproject.toml  rda.html  robots.txt  rona.html  search.json  settings.ini  simulation.html  sitemap.xml
.github/workflows/: test.yaml
genomic-offsets/: Geometric.py  GradientForest.py  RDA.py  RONA.py  RidgeLFMM.py  TracyWidom.py  conda_environment.yaml  setup.py
genomic_offsets/: GradientForest.py  RDA.py  RONA.py  RidgeLFMM.py  _modidx.py  geometric.py
genomic_offsets/datasets/: causal.npz
nbs/: 01_RONA.ipynb  01_simulation.ipynb  02_RDA.ipynb  02_RONA.ipynb  03_LFMM.ipynb  03_RDA.ipynb  03_geometric.ipynb  04_LFMM.ipynb  04_geometric.ipynb  05_gf.ipynb  06_LFMM.ipynb  _quarto.yml  index.ipynb  nbdev.yml  references.bib  sidebar.yml
src/: gain_model.slim
src/genomic_offsets/: Geometric.py  GradientForest.py  RDA.py  RONA.py  RidgeLFMM.py  TracyWidom.py  __init__.py
tests/: test_RidgeLFMM.py  test_genomic_offsets.py  test_lfmm.py
