[project]
name = "Genomic-offsets"
authors = [
    { name = "Curro Campuzano Jiménez", email = "campuzanocurro@gmail.com" },
]
description = "Implementation of popular genomic offset statistics"
readme = "README.md"
requires-python = ">= 3.10"
classifiers = ["Development Status :: 2 - Pre-Alpha"]
version = "0.1.2"
license = "MIT"
license-files = ["LICEN[CS]E*"]


[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
[project.urls]
Homepage = "https://github.com/currocam/genomic-offsets"
